manifest/prod/webadmin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webadmin-deployment
  namespace: group-5-prod
spec:
  selector:
    matchLabels:
      app: webadmin
  template:
    metadata:
      labels:
        app: webadmin
    spec:
      containers:
        - name: webadmin-container
          image: jirasinm/tcc-group-5-webadmin:v0.1.6
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 3000
