manifest/prod/webadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webadmin-service
  namespace: group-5-prod
  labels:
    app: webadmin
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: webadmin
