manifest/prod/webadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webadmin-ingress
  namespace: group-5-prod

  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: webadmin.sleeping24hrs.com

      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: webadmin-service
                port:
                  number: 80
